Refactor HTML structure and add DOCTYPE

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Text Basics — Assignment 7</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
-  
-  
+  </head>
+  <body>
     <!-- Exercise 1 -->
     <h1>Important heading</h1>
     <h2>Less important heading</h2>
@@ -29,4 +34,6 @@
     <!-- Exercise 3 -->
     <h1>Using Emphasis and Importance</h1>
     <p>Sometimes you want to <em>stress</em> a word or show something is <strong>very important</strong>.</p>
-    <p>Combining them helps give meaning and tone to the text.</p>
+    <p>Combining them helps give meaning and tone to your text.</p>
+  </body>
+</html>
